# tinyxml2

./: .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: action.yml  test.yml
contrib/: BUILD.bazel
