cc_library(
    name = "tinyxml2",
    srcs = ["tinyxml2.cpp"],
    hdrs = ["tinyxml2.h"],
    deps = [],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "resources",
    srcs = glob(["resources/*.xml", "resources/out/*.txt"]),
)

cc_test(
    name = "xmltest",
    srcs = ["xmltest.cpp"],
    deps = [":tinyxml2"],
    data = [":resources"]
)
